[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>org.lucius</groupId>
 	<artifactId>recipe</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>recipe</name>
 	<description>Demo project for Recipe</description>
 	<url />
@@ -23,7 +23,7 @@
 		<connection>scm:git:https://github.com/scamiros/recipe.git</connection>
 		<developerConnection>scm:git:https://github.com/scamiros/recipe.git</developerConnection>
 		<url>https://github.com/scamiros/recipe</url>
-		<tag>recipe-0.0.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
